@@ -1,0 +1,2 @@
+This directory contains patches to enable synce applications
+to work with synce-hal that have not been well tested.
